--- a/client/src/assets/css/home.css
+++ b/client/src/assets/css/home.css
@@ -1,10 +1,22 @@
+.user-profile, .job-apps article {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: .25rem .5rem;
+}
+
+.user-profile h2 {
+    grid-column: span 4;
+}
+
 .job-apps {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: .5rem;
 }
 
-.job-apps article {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+.job {
+    background-color: rgba(255, 255, 255, 0.075);
+    border-radius: 2rem;
+    padding: .25rem .5rem;
+    align-items: center;
 }
