--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -44,6 +44,13 @@ form button {
   grid-column: span 2;
 }
 
+fieldset {
+  grid-column: span 2;
+  display: flex;
+  gap: 2rem;
+  padding: .25rem .5rem
+}
+
 /* divs */
 .App {
   display: flex;
