--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -33,23 +33,7 @@ a {
   color: var(--hired);
 }
 
-/* form */
-form {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  gap: .5rem;
-}
 
-form button {
-  grid-column: span 2;
-}
-
-fieldset {
-  grid-column: span 2;
-  display: flex;
-  gap: 2rem;
-  padding: .25rem .5rem
-}
 
 /* divs */
 .App {
@@ -82,6 +66,61 @@ nav {
 main {
   flex-grow: 1;
   gap: 1rem;
+  align-items: center;
+}
+
+section {
+  padding: 1rem .5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 /* homepage */
+
+/* job */
+.job-form-section {
+  width: 75vw;
+}
+
+/* form */
+.job-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: .5rem;
+}
+
+.job-form article {
+  display: flex;
+  flex-direction: column;
+}
+
+.job-form .wrapper {
+  grid-column: span 2;
+}
+
+.wrapper {
+  gap: .25rem;
+}
+
+fieldset {
+  grid-column: span 2;
+  display: flex;
+  gap: 2rem;
+  padding: .25rem .5rem
+}
+
+input, button {
+  border-radius: 4rem;
+  padding: .5rem;
+}
+
+input {
+  background-color: var(--secondary);
+  border: none;
+}
+
+input:focus {
+  outline: none;
+}
+
