--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -33,8 +33,6 @@ a {
   color: var(--hired);
 }
 
-
-
 /* divs */
 .App {
   display: flex;
@@ -44,7 +42,7 @@ a {
   align-items: center;
   background-color: var(--secondary);
   color: var(--tertiary);
-  gap: 1rem;
+  /* gap: 1rem; */
   font-variant: small-caps;
 }
 
@@ -55,6 +53,9 @@ footer {
   flex-direction: column;
   width: inherit;
   background-color: var(--primary);
+}
+
+header, footer {
   padding: .25rem .5rem;
 }
 
@@ -64,16 +65,21 @@ nav {
 }
 
 main {
+  background-color: transparent;
   flex-grow: 1;
   gap: 1rem;
   align-items: center;
+  padding: 2rem .5rem;
 }
 
 section {
-  padding: 1rem .5rem;
+  background-color: var(--primary);
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  border-radius: 1rem;
+  border: 1px solid var(--primary);
 }
 
 /* homepage */
@@ -124,3 +130,28 @@ input:focus {
   outline: none;
 }
 
+@media screen and (min-width: 768px) {
+  body, input, button {
+    font-size: 1.5rem;
+  }
+
+  header {
+    flex-direction: row;
+    gap: 1rem;
+  }
+
+  nav {
+    flex-grow: 1;
+    align-items: center;
+  }
+
+  section {
+    gap: 1.25rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  /* nav {
+    align-items: flex-end;
+  } */
+}
