styled app for mvp

--- a/client/src/assets/css/home.css
+++ b/client/src/assets/css/home.css
@@ -5,6 +5,9 @@
     gap: .25rem .5rem;
 }
 
+.user-profile, .jobs {
+    width: 100%;
+}
 .user-profile {
     grid-template-columns: repeat(5, auto);
 }
