--- a/client/src/assets/css/job.css
+++ b/client/src/assets/css/job.css
@@ -1,3 +1,8 @@
+.job-section,
+.notes-section {
+    width: 100%;
+}
+
 .job-details {
     display: grid;
     grid-template-columns: auto 1fr;
@@ -9,6 +14,11 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
+}
+
+.notes-section {
+    max-height: 60vh;
+    overflow-y: hidden;
 }
 
 .note-form {
@@ -27,7 +37,9 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    overflow-y: scroll;
 }
+
 .note {
     display: grid;
     grid-template-columns: 1fr auto;
@@ -46,4 +58,12 @@
 
 .note button {
     grid-area: c;
+    height: fit-content;
+}
+
+@media screen and (min-width: 1024px) {
+    main {
+        display: grid;
+        grid-template-columns: 1fr auto;
+    }
 }
