--- a/client/src/assets/css/home.css
+++ b/client/src/assets/css/home.css
@@ -1,30 +1,20 @@
-.user-profile,
+#user-profile,
 .jobs article {
     display: grid;
     gap: .25rem .5rem;
 }
 
-.user-profile,
-.jobs {
-    width: 100%;
-}
-
-.user-profile {
+#user-profile {
     grid-template-columns: repeat(5, auto);
 }
 
-.user-profile h2 {
+#user-profile h2 {
     grid-column: span 5;
 }
 
-.jobs {
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-}
-
+/* job list */
 .jobs article {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 1fr 1fr 4rem 2.5rem;
     padding: .25rem .5rem;
 }
 
@@ -34,21 +24,19 @@
     align-items: center;
 }
 
-.display-md {
-    display: none;
+.job a {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.job .count {
+    text-align: center;
 }
 
 @media screen and (min-width: 768px) {
-    .display-md {
-        display: contents;
-    }
-
-    .count {
-        padding-left: .75rem;
-    }
-
     .jobs article,
-    .user-profile {
+    #user-profile {
         grid-template-columns: repeat(5, 1fr);
     }
 
@@ -60,30 +48,25 @@
 @media screen and (min-width: 1024px) {
 
     main {
-        grid-template-areas: 
-        "c a"
-        "c b";
-    }
-
-    .jobs {
-        height: 100%;
-        overflow-y: scroll;
+        grid-template-areas:
+            "c a"
+            "c b";
     }
 
     /* section | displays users stats */
-    .user-profile {
+    #user-profile {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         grid-area: a;
     }
 
-    .user-profile article {
+    #user-profile article {
         display: grid;
         text-align: center;
     }
 
-    .user-profile .count {
+    #user-profile .count {
         padding: 0;
     }
 
