--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -10,7 +10,7 @@
 }
 
 * {
-  outline: 1px dotted gray;
+  /* outline: 1px dotted gray; */
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -35,6 +35,11 @@ a {
   color: var(--hired);
 }
 
+/* hidden */
+.display-md {
+  display: none;
+}
+
 /* divs */
 #root {
   display: flex;
@@ -46,7 +51,6 @@ a {
 .App {
   display: flex;
   flex-direction: column;
-  /* height: 100vh; */
   width: 100%;
   align-items: center;
   background-color: var(--secondary);
@@ -59,20 +63,23 @@ a {
 /* desktop flex */
 footer,
 header,
-main
- {
+main {
   display: flex;
   width: inherit;
 }
 
 footer {
   color: var(--primary);
+  justify-content: center;
 }
 
 footer,
 header {
   padding: .25rem .5rem;
   align-items: baseline;
+}
+
+header {
   justify-content: space-between;
 }
 
@@ -81,14 +88,14 @@ main {
   background-color: var(--primary);
 }
 
-
 main {
   flex-direction: column;
   background-color: transparent;
   height: 100%;
   gap: 1rem;
   align-items: center;
-  padding: 1rem .5rem;
+  padding: 1rem .5rem 0 .5rem;
+  overflow-y: hidden;
 }
 
 nav {
@@ -105,6 +112,32 @@ section {
   gap: 1rem;
   border-radius: 1rem;
   border: 1px solid var(--primary);
+}
+
+.details-section,
+.form-section,
+.list-section {
+  width: inherit;
+}
+
+.list-section {
+  gap: .5rem;
+  overflow-y: scroll;
+}
+
+.list-section h2 {
+  position: sticky;
+  top: 0;
+  background-color: var(--primary);
+  box-shadow: 0 -.5rem 0 1rem var(--primary);
+}
+
+.list-section article:nth-child(2) {
+  font-size: 1rem;
+  position: sticky;
+  top: 2.2rem;
+  background-color: var(--primary);
+  box-shadow: 0 0 0 .25rem var(--primary);
 }
 
 .wrapper {
@@ -162,6 +195,9 @@ button:hover {
 }
 
 @media screen and (min-width: 768px) {
+  .display-md {
+    display: contents;
+  }
 
   body,
   input,
@@ -196,7 +232,6 @@ button:hover {
   }
 
   footer {
-    align-items: center;
     font-size: .75rem;
   }
 
@@ -210,7 +245,8 @@ button:hover {
     gap: .5rem;
   }
 
-  .form-section, .details-section {
+  .form-section,
+  .details-section {
     height: 100%;
   }
 
@@ -235,7 +271,7 @@ button:hover {
     font-size: 1.5rem;
   }
 
-  .message  {
+  .message {
     grid-column: span 2;
     text-align: center;
   }
