--- a/client/src/assets/css/job.css
+++ b/client/src/assets/css/job.css
@@ -1,13 +1,11 @@
-.job-section,
-#notes-section {
-    width: 100%;
+#job-section {
+    gap: .5rem;
 }
 
 .job-details {
     display: grid;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 1fr auto auto;
     gap: .25rem 1rem;
-    padding: .25rem .5rem;
 }
 
 .job-buttons {
@@ -18,7 +16,13 @@
 
 #notes-section {
     max-height: 60vh;
-    overflow-y: hidden;
+}
+
+#notes-section h2 {
+    position: sticky;
+    top: 0;
+    background-color: var(--primary);
+    box-shadow: 0 -.5rem 0 1rem var(--primary);
 }
 
 .note-form {
@@ -33,11 +37,10 @@
 }
 
 /* note list component */
-.notes {
+#notes {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    overflow-y: scroll;
 }
 
 .note {
