--- a/client/src/assets/css/login.css
+++ b/client/src/assets/css/login.css
@@ -20,12 +20,14 @@
 }
 
 @media screen and (min-width: 1024px) {
+
+    .login-section {
+        justify-self: center;
+        grid-column: span 2;
+    }
+    
     .login-form .wrapper {
         gap: .5rem;
     }
 
-    #login-section {
-        width: fit-content;
-        justify-self: center;
-    }
-  }
+}
