--- a/client/src/assets/css/home.css
+++ b/client/src/assets/css/home.css
@@ -75,7 +75,7 @@
     }
 
     #jobs article {
-        grid-template-columns: 1fr 2fr 3.5rem 3rem 5rem;
+        grid-template-columns: 3.5rem 1fr 2fr 3.5rem 3rem 5rem;
         gap: 1rem;
     }
 
