--- a/client/src/assets/css/home.css
+++ b/client/src/assets/css/home.css
@@ -5,16 +5,16 @@
 }
 
 #user-profile {
-    grid-template-columns: repeat(5, auto);
+    grid-template-columns: repeat(6, auto);
 }
 
 #user-profile h2 {
-    grid-column: span 5;
+    grid-column: 1 / -1;
 }
 
 /* job list */
 #jobs article {
-    grid-template-columns: 1fr 1fr 4rem 2.5rem;
+    grid-template-columns: 3.25rem 1fr 1fr 3rem 2.5rem;
     padding: .25rem .5rem;
 }
 
@@ -36,11 +36,12 @@
 
 @media screen and (min-width: 768px) {
     #user-profile {
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(6, 1fr);
     }
 
     #jobs article {
-        grid-template-columns: 1fr 1fr 6rem 3rem 7rem;
+        grid-template-columns: 3.5rem 1fr 2fr 3.5rem 3rem 5rem;
+        gap: 1rem;
     }
 }
 
@@ -72,11 +73,6 @@
 
     .list-section {
         grid-area: b;
-    }
-
-    #jobs article {
-        grid-template-columns: 3.5rem 1fr 2fr 3.5rem 3rem 5rem;
-        gap: 1rem;
     }
 
     #jobs h2 {
