--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -217,7 +217,7 @@ button:hover {
 @media screen and (min-width: 768px) {
 
   .display-md {
-    display: contents;
+    display: initial;
   }
 
   body,
