--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -103,7 +103,7 @@ main {
   gap: 1rem;
   align-items: center;
   padding: 1rem .5rem 0 .5rem;
-  overflow-y: hidden;
+  overflow-y: scroll;
 }
 
 nav {
@@ -119,7 +119,7 @@ section {
   flex-direction: column;
   gap: 1rem;
   border-radius: 1rem;
-  border: 1px solid var(--primary);
+  /* border: 1px solid var(--primary); */
 }
 
 .details-section,
@@ -153,16 +153,17 @@ section {
 }
 
 fieldset {
-  grid-column: span 2;
   display: flex;
   justify-content: space-between;
   gap: 2rem;
   padding: .25rem .5rem;
   transition: 1s border-color;
+  border-radius: .5rem;
+  border-color: var(--blue);
 }
 
 fieldset:hover {
-  border-color: var(--blue);
+  border-color: var(--text);
 }
 
 input,
@@ -255,6 +256,8 @@ button:hover {
   main {
     display: grid;
     grid-template-columns: 25rem auto;
+    grid-template-rows: max-content;
+    align-items: flex-start;
     gap: .5rem;
   }
 
