--- a/client/src/assets/css/job-form.css
+++ b/client/src/assets/css/job-form.css
@@ -33,7 +33,7 @@
     gap: .5rem 1rem;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 750px) {
     main {
         grid-template-areas:
             "c a"
@@ -46,8 +46,13 @@
         justify-self: center;
     }
 
-    .job-form {
+    #add-job {
+        grid-template-columns: 1fr 1fr;
         gap: 1rem;
+    }
+
+    #add-job .wrapper {
+        grid-column: 1 / -1;
     }
 
     fieldset input {
