--- a/client/src/assets/css/home.css
+++ b/client/src/assets/css/home.css
@@ -91,3 +91,9 @@
         background-color: var(--primary);
     }
 }
+
+@media screen and (min-width: 1024px) {
+    /* .aside {
+        width: max-content;
+    } */
+}
