--- a/client/src/assets/css/home.css
+++ b/client/src/assets/css/home.css
@@ -14,7 +14,7 @@
 
 /* job list */
 #jobs article {
-    grid-template-columns: 1fr 1fr 3rem 2.5rem;
+    grid-template-columns: 1fr 2fr 2.5rem;
     padding: .25rem .5rem;
 }
 
@@ -57,7 +57,7 @@
     }    
 
     #jobs article {
-        grid-template-columns: 3.75rem 1fr 2fr 3.5rem 3rem 5rem;
+        grid-template-columns: 3.75rem 1fr 2fr 4.5rem 3rem 5rem;
         gap: 1rem;
     }
 
